[package]
name = "rosu-memory"
version = "0.2.0"
edition = "2021"

[dependencies]
async-tungstenite = "0.23.0"
cfg-if = "1.0.0"
clap = { version = "4.4.8", default-features = false, features = ["std", "derive", "env"] }
eyre = "0.6.9"
paste = "1.0.14"
rosu-pp = {  version = "0.10.0", features = ["gradual"] }
serde = { version = "1.0.192", default-features = false, features = ["derive"] }
serde_json = "1.0.108"
serde_repr = "0.1.17"
smol = "1.3.0"
futures-util = { version = "0.3.29", default-features = false, features = ["sink"] }
tracy-client = { version = "0.16.4", default-features = false }
async-dup = "1.2.2"
hyper = { version = "1.0.1", default-features = false, features = ["server", "http1"] }
http-body-util = "0.1.0"
pin-project-lite = "0.2.13"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.25.0",  default-features = false,  features = ["uio", "process", "feature"] }

[target.'cfg(windows)'.dependencies]
windows = {version = "0.48", features = ["Win32_Foundation", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Threading", "Win32_System_Memory", "Win32_System_Diagnostics_Debug", "Win32_System_ProcessStatus"] }

[features]
tracy-profile = ["tracy-client/default"]

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release.package."*"]
opt-level = "s"

[dev-dependencies]
rand = "0.8.5"

[lints.clippy]
# Ignoring this clippy warning because one edge case
# with prim_read_array_impl(u8).
# std::slice::from_raw_parts_mut(..) expects
# to use element count (see docs) not bytes and in u8 case it becomes
# something like: 
# buff.len() * std::mem::size_of::<u8>()
# ^                  ^ always 1
# |
# valid length
# valid length * 1 = valid_length
# So clippy thinks we passing bytes count not element count
size_of_in_element_count = "allow"
