[package]
name = "rosu-memory"
version = "0.2.0"
edition = "2021"

[dependencies]
rosu-mem = { git = "https://github.com/486c/rosu-mem.git", tag = "v2.0.0" }
async-tungstenite = "0.23.0"
cfg-if = "1.0.0"
clap = { version = "4.4.8", default-features = false, features = ["std", "derive", "env"] }
eyre = "0.6.12"
rosu-pp = { version = "2.0.0" }
serde = { version = "1.0.192", default-features = false, features = ["derive"] }
serde_json = "1.0.108"
serde_repr = "0.1.17"
smol = "1.3.0"
futures-util = { version = "0.3.29", default-features = false, features = ["sink"] }
tracy-client = { version = "0.16.4", default-features = false }
async-dup = "1.2.2"
hyper = { version = "1.0.1", default-features = false, features = ["server", "http1"] }
http-body-util = "0.1.0"
pin-project-lite = "0.2.13"

[features]
tracy-profile = ["tracy-client/default"]

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release.package."*"]
opt-level = "s"
