[package]
name = "rosu-memory"
version = "2.0.1"
edition = "2021"

[dependencies]
rosu-mem = { git = "https://github.com/486c/rosu-mem.git", tag = "v2.0.0" }
async-tungstenite = "0.29.1"
cfg-if = "1.0.0"
clap = { version = "4.5.32", default-features = false, features = ["std", "derive", "env"] }
eyre = "0.6.12"
rosu-pp = { version = "3.0.0" }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
smol = "1.3.0"
futures-util = { version = "0.3.31", default-features = false, features = ["sink"] }
tracy-client = { version = "0.16.4", default-features = false }
async-dup = "1.2.2"
hyper = { version = "1.6.0", default-features = false, features = ["server", "http1"] }
http-body-util = "0.1.3"
pin-project-lite = "0.2.16"

[features]
tracy-profile = ["tracy-client/default"]

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release.package."*"]
opt-level = "s"
